# Arbitrage-Betting

./: .gitignore  Abritrage Betting.ipynb  Kalshi.ipynb  Kalshi.py  Kalshi_ATL.csv  Kalshi_ATL_JAN07_WIN.csv  Kalshi_BC.csv  Kalshi_BKN_JAN07_WIN.csv  Kalshi_BOS_JAN07_WIN.csv  Kalshi_CHA_JAN07_WIN.csv  Kalshi_Creighton.csv  Kalshi_DEN_JAN07_WIN.csv  Kalshi_Fordham.csv  Kalshi_GSW.csv  Kalshi_GT.csv  Kalshi_HOU.csv  Kalshi_HOU_JAN07_WIN.csv  Kalshi_Jokic.csv  Kalshi_Kentucky.csv  Kalshi_LAC.csv  Kalshi_LAC_JAN07_WIN.csv  Kalshi_LAL_JAN07_WIN.csv  Kalshi_Luka.csv  Kalshi_Luka_NO.csv  Kalshi_Luka_YES.csv  Kalshi_MIA.csv  Kalshi_MIN.csv  Kalshi_Missouri.csv  Kalshi_NOP_JAN07_WIN.csv  Kalshi_NYK.csv  Kalshi_NYK_JAN07_WIN.csv  Kalshi_ORL_JAN07_WIN.csv  Kalshi_PHI.csv  Kalshi_PHX.csv  Kalshi_POR_JAN07_WIN.csv  Kalshi_Richmond.csv  Kalshi_SAS_JAN07_WIN.csv  Kalshi_Senton_Hall.csv  Kalshi_Shai.csv  Kalshi_TOR.csv  (+44 more)
cpp/: CMakeLists.txt  README.md
cpp/src/: config.cpp  config.hpp  crypto.cpp  crypto.hpp  intra_kalshi_arbitrage.cpp  intra_kalshi_arbitrage.hpp  kalshi_feed.cpp  kalshi_feed.hpp  kalshi_http_gateway.cpp  kalshi_http_gateway.hpp  logging.cpp  logging.hpp  main.cpp  order_book.cpp  order_book.hpp  position_manager.cpp  position_manager.hpp  util.cpp  util.hpp
snapshots/: orderbook_snapshots_20260208.csv
statics/: cross_exchange_statics.json  events.json  kalshi_event_to_market_mapping.json  kalshi_spread_event_to_market_mapping.json  kalshi_spread_events.json  kalshi_total_event_to_market_mapping.json  kalshi_volume_per_market.json  mutually_exclusive_events.json  non_mutually_exclusive_events.json  polymarket_us_event_to_market_mapping.json  polymarket_us_spread_event_to_market_mapping.json  polymarket_us_total_event_to_market_mapping.json  statics.json
